# sstr

./: .gitignore  CMakeLists.txt  README.md  benchmark.h  main.c  sstr.h  sstr_ext.h  sw.h  test.h
docs/: Doxyfile  index.html
logo/: sstr-logo.blend  sstr-logo.blend1
sstr_docs/: Doxyfile  style.css
tests/: test_append.h  test_from.h  test_insert.h  test_realize.h  test_stackify.h  test_substr.h
