cmake_minimum_required(VERSION 3.25)
project(sstr C)

set(CMAKE_C_STANDARD 90)
set(CMAKE_C_COMPILER "gcc")

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall")

# OPTIMIZATION LEVEL MUST BE -O0 FOR BENCHMARKS
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 ")

# RUN TESTS IN -O3
#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O3 ")

add_executable(sstr main.c sstr.h)
